# mcmc-scratch

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: sampler.py
