[tool.poetry]
name = "glider-dash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.1"
numpy = "^1.26.4"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scipy = "^1.13.0"
mpmath = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"